--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -32,7 +32,7 @@
 
 \newcommand{\ring}{\mathcal{R}}
 \newcommand{\decomp}{\mathsf{dec}}
-\newcommand{\binsca}{\mathsf{bin}_{\NN}}
+\newcommand{\binsca}{\mathsf{bin}}
 \newcommand{\proj}{\mathsf{proj}}
 \newcommand{\lbl}{\mathsf{label}}
 \newcommand{\ball}{\mathcal{B}}
@@ -42,6 +42,8 @@
 \newcommand{\qkots}{q_\hots}
 \newcommand{\qhvc}{q_\hvc}
 \newcommand{\betaopen}{\beta_\mathsf{op}}
+
+\newcommand{\bagg}{\beta_{\mathsf{agg}}}
 
 
 \newcommand{\nnote}[1]{{\color{red}[\textbf{Nils} #1 ]}}
