--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -9,6 +9,7 @@
 \newcommand{\verify}{\mathsf{Vrfy}}
 \newcommand{\wverify}{\mathsf{wVrfy}}
 \newcommand{\sverify}{\mathsf{sVrfy}}
+\newcommand{\iverify}{\mathsf{iVrfy}}
 
 \newcommand{\params}{\mathsf{pp}}
 
